@@ -34,11 +34,11 @@ xcf_read_int32 (FILE    *fp,
                 guint32 *data,
                 gint     count)
 {
-  guint total = count;
+  guint total = 0;
 
   if (count > 0)
     {
-      xcf_read_int8 (fp, (guint8 *) data, count * 4);
+      total += xcf_read_int8 (fp, (guint8 *) data, count * 4);
 
       while (count--)
         {
@@ -47,7 +47,7 @@ xcf_read_int32 (FILE    *fp,
         }
     }
 
-  return total * 4;
+  return total;
 }
 
 guint
@@ -63,14 +63,16 @@ xcf_read_int8 (FILE   *fp,
                guint8 *data,
                gint    count)
 {
-  guint total = count;
+  guint total = 0;
 
   while (count > 0)
     {
-      gint  bytes = fread ((char *) data, sizeof (char), count, fp);
+      gint bytes = fread ((char *) data, sizeof (char), count, fp);
 
       if (bytes <= 0) /* something bad happened */
         break;
+
+      total += bytes;
 
       count -= bytes;
       data += bytes;
